--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,19 @@
       name="description"
       content="Ms aromas site created using create-react-app"
     />
+    <!-- Link React-Bootstrap -->
+		<link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+    crossorigin="anonymous"
+  />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
+  <!-- inconos Bootstrap -->
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+  />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   
     
