--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <title>Madreselva Aromas</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript></noscript>
     <div id="root"></div>
    
   </body>
